Add Umami analytics

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,8 +25,9 @@ egg-mode = { git = "https://github.com/egg-mode-rs/egg-mode", rev = "6b81073eba9
 regex = "1.5"
 htmlescape = "0.3.1"
 tempfile = "3.2.0"
-reqwest = "0.10.4"
+reqwest = "0.11.9"
 error-chain = "0.12.4"
 async-trait = "0.1.50"
 warp = "0.3.0"
 serde_json = "1.0.50"
+serde = "1.0.136"
