--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,22 +12,19 @@ path = "src/bot/bot.rs"
 name = "twt_2_tg_bot"
 path = "src/main.rs"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-teloxide = { version = "0.5.0", features = ["auto-send"] }
+teloxide = { version = "0.11.0", features = ["macros", "auto-send", "webhooks-axum"] }
 mime = "0.3.16"
 log = "0.4.8"
 pretty_env_logger = "0.4.0"
-tokio = { version =  "1.3", features = ["rt-multi-thread", "macros"] }
-tokio-stream = "0.1.3"
+tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
 egg-mode = { git = "https://github.com/egg-mode-rs/egg-mode", rev = "6b81073eba9" }
 regex = "1.5"
 htmlescape = "0.3.1"
 tempfile = "3.2.0"
-reqwest = "0.11.9"
+reqwest = "0.11.11"
 error-chain = "0.12.4"
 async-trait = "0.1.50"
-warp = "0.3.0"
 serde_json = "1.0.50"
 serde = "1.0.136"
+url = "2.3.1"
