--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,5 +16,5 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: |
-             docker build . --file Dockerfile --tag twt2tgbot:latest
+             docker build . --file Dockerfile --tag ghcr.io/vladvlasov256/twt2tgbot:latest
              docker push ghcr.io/vladvlasov256/twt2tgbot:latest
