--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,10 +13,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - name: login to GitHub Container Registry
+      uses: docker/login-action@v1
       with:
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+    - uses: actions/checkout@v3
     - name: Build the Docker image
       run: |
-             docker build . --file Dockerfile --tag ghcr.io/vladvlasov256/twt2tgbot:latest
-             docker push ghcr.io/vladvlasov256/twt2tgbot:latest
+             docker build . --file Dockerfile --tag ghcr.io/${{ github.actor }}/twt2tgbot:latest
+             docker push ghcr.io/${{ github.actor }}/twt2tgbot:latest
